--- a/Notes/Views/Note/GetNotes.cshtml
+++ b/Notes/Views/Note/GetNotes.cshtml
@@ -35,7 +35,7 @@ else
                     @*<div class="table-row table-row-second">
                         <div class="table-cell">1</div>
                         <div class="table-cell">
-                            <span>23fewfewiubejhwrbewiubejhwrbfeewiubejhwrbfeewiubejhwrbfeewiubejhwrbfeewiubejhwrbfeewiubejhwrbfeewiubejhwrbfeewiubejhwrbfeewiubejhwrbfefewfw</span>
+                            <span>rbfefewfw</span>
                             <div class="buttons">
                                 <button img="" href=""></button>
                                 <button img="" href=""></button>
@@ -60,41 +60,3 @@ else
 
 
 
- @*<body data-home-page="Главная.html" data-home-page-title="Главная" class="u-body u-palette-1-light-2 u-xl-mode" data-lang="ru">
-<section class="u-align-center u-clearfix u-section-1" id="sec-0e71">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-table u-table-responsive u-table-1">
-          <table class="u-table-entity u-table-entity-1">
-            <colgroup>
-              <col width="4%">
-              <col width="21.4%">
-              <col width="46.6%">
-              <col width="28%">
-            </colgroup>
-            <thead class="u-gradient u-table-header u-table-header-1">
-              <tr style="height: 27px;">
-                <th class="u-border-3 u-border-grey-50 u-table-cell u-table-cell-1">№</th>
-                <th class="u-border-3 u-border-grey-50 u-table-cell u-table-cell-2">Имя заметки</th>
-                <th class="u-border-3 u-border-grey-50 u-table-cell u-table-cell-3">Описание</th>
-                <th class="u-border-3 u-border-grey-50 u-table-cell u-table-cell-4">Дата создания</th>
-              </tr>
-            </thead>
-            <tbody class="u-custom-font u-palette-1-light-3 u-table-body u-text-font u-table-body-1">
-                        @foreach (var note in Model)
-                        {
-                            <tr style="height: 44px;">
-                            <td class="u-border-2 u-border-grey-75 u-table-cell">@note.Id</td>
-                            <td class="u-border-2 u-border-grey-75 u-table-cell">@note.Name</td>
-                            <td class="u-border-2 u-border-grey-75 u-table-cell"> &nbsp; <span class="u-icon u-icon-1"></span>&nbsp;@note.Description </td>
-                            <td class="u-border-2 u-border-grey-75 u-table-cell">@note.Date</td>
-                            </tr>
-                        }
-            </tbody>
-          </table>
-        </div>
-        <span class="u-file-icon u-hover-feature u-icon u-icon-2" href="http://localhost:7118/Notes/GetNotes"><img src="~/images/3299937.png" alt=""></span>
-        <span class="u-file-icon u-hover-feature u-icon u-icon-rectangle u-icon-3" data-href="Страница-1.html" data-animation-name="" data-animation-duration="0" data-animation-direction=""><img src="~/images/258332.png" alt=""></span>
-        <span class="u-file-icon u-hover-feature u-icon u-icon-4" data-href="Страница-1.html"><img src="~/images/5379016.png" alt=""></span>
-      </div>
-    </section>
-    </body>*@
