--- a/Notes/Views/Note/UpdateNote.cshtml
+++ b/Notes/Views/Note/UpdateNote.cshtml
@@ -18,6 +18,6 @@
             </div>
             <div class="form__buttons">
                 <button class="form__button">Удалить</button>
-                <button class="form__button">Изменить</button>
+                <button asp-controller="Note" asp-action="UpdateNote" class="form__button">Изменить</button>
             </div>
         </form>
