--- a/Notes/Views/Note/GetNotes.cshtml
+++ b/Notes/Views/Note/GetNotes.cshtml
@@ -2,14 +2,21 @@
 
 @{
     ViewData["Title"] = "Notes";
+    int rowCount = 0;
 }
 
 @*@if(Model.Count == 0)
 {
-    
+    TODO: Обработать NullReference с базы
 }
 else
-{*@
+{
+
+                                
+
+
+*@
+<form method="get" asp-antiforgery="true">
         <div class="table">
             <div class="table-head">
                 <div class="table-th">№</div>
@@ -20,13 +27,14 @@ else
             <div class="table-body">
                 @foreach (var note in Model)
                 {
-                    <div class="table-row">
-                    <div class="table-cell"></div>
+                rowCount++;
+                <div class="table-row">
+                    <div class="table-cell">@rowCount</div>
                         <div class="table-cell">
                             <span>@note.Name</span>
                             <div class="buttons">
-                                <a asp-controller="Note" asp-action="UpdateNote"><img src="~/images/258332.png" /></a>
-                                <a asp-controller="Note" asp-action="DeleteNote"><img src="~/images/3299937.png" /></a>
+                                <a asp-action="CreateNote" asp-route-id="@note.Id"><img src="~/images/258332.png" /></a>
+                                <a asp-action="DeleteNote" asp-route-id="@note.Id"><img src="~/images/3299937.png" /></a>
                             </div>
                         </div>
                         <div class="table-cell">@note.Description</div>
@@ -55,6 +63,7 @@ else
                 </div>
             </div>
         </div>
+        </form>
 @*}*@
 
 
