--- a/Notes/Views/Note/GetNotes.cshtml
+++ b/Notes/Views/Note/GetNotes.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Notes.Domain.Entity.Note>
+﻿@model List<Notes.Domain.ViewModel.Note.NoteViewModel>
 
 @{
     ViewData["Title"] = "Notes";
